--- a/groww_clone-main/styles/stock.css
+++ b/groww_clone-main/styles/stock.css
@@ -7,17 +7,20 @@
 .a3-index {
   width: 100%;
 }
+
 .a3-index-nav {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
+
 .a3-index-nav h4 {
   margin: 0;
   font-size: 20px;
   text-transform: capitalize;
   color: #44475b;
 }
+
 .a3-index-nav button {
   border: none;
   background-color: #e5faf5;
@@ -27,29 +30,34 @@
   height: 30px;
   border-radius: 50px;
 }
-.a1_stock > p {
+
+.a1_stock>p {
   text-transform: capitalize;
   font-size: 15px;
   color: #a2808c;
 }
+
 .a3-index-image {
   display: flex;
   margin-top: 10px;
   gap: 43px;
   justify-content: center;
 }
-.a3-index-nav > h4,
+
+.a3-index-nav>h4,
 button:hover {
   cursor: pointer;
 }
 
-.a3-index-image > div:hover {
+.a3-index-image>div:hover {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   cursor: pointer;
 }
+
 .in-news-div {
   margin-top: 30px;
 }
+
 .a-in-news {
   display: flex;
 
@@ -57,7 +65,8 @@ button:hover {
 
   justify-content: space-between;
 }
-.a-in-news > button {
+
+.a-in-news>button {
   border: none;
   background-color: #e5faf5;
   color: #6ed9b6;
@@ -66,7 +75,8 @@ button:hover {
   height: 30px;
   border-radius: 50px;
 }
-.a-in-news > h4 {
+
+.a-in-news>h4 {
   margin: 0;
   font-size: 20px;
   text-transform: capitalize;
@@ -76,18 +86,21 @@ button:hover {
 .top-sectors-div {
   margin-top: 80px;
 }
+
 .a-top-sec {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-.a-top-sec > h4 {
+
+.a-top-sec>h4 {
   margin: 0;
   font-size: 20px;
   text-transform: capitalize;
   color: #44475b;
 }
-.a-top-sec > button {
+
+.a-top-sec>button {
   border: none;
   background-color: white;
   color: #6ed9b6;
@@ -97,9 +110,11 @@ button:hover {
   height: 30px;
   border-radius: 50px;
 }
+
 .name-of-sec {
   margin-top: 20px;
 }
+
 .btn-name-of-sec {
   border: none;
   margin-right: 10px;
@@ -112,6 +127,7 @@ button:hover {
   border-radius: 7px;
   text-transform: capitalize;
 }
+
 .btn2-name-of-sec {
   border: none;
   margin-right: 10px;
@@ -132,9 +148,11 @@ button:hover {
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
 .top-by-cap {
   margin-top: 80px;
 }
+
 .market-cap-s1 {
   display: flex;
 
@@ -142,13 +160,15 @@ button:hover {
   margin-top: 50px;
   justify-content: space-between;
 }
-.market-cap-s1 > h4 {
+
+.market-cap-s1>h4 {
   margin: 0;
   font-size: 20px;
   text-transform: capitalize;
   color: #44475b;
 }
-.market-cap-s1 > button {
+
+.market-cap-s1>button {
   border: none;
   background-color: white;
   color: #6ed9b6;
@@ -174,6 +194,7 @@ button:hover {
   color: #44475b;
   background-color: #f6f6f7;
 }
+
 .m-cap-heading-e {
   border: 1px solid #f6f6f7;
   text-align: left;
@@ -181,20 +202,24 @@ button:hover {
   color: #f6f6f7;
   background-color: #f6f6f7;
 }
+
 .m-cap-content {
   /* border: 1px solid #dddddd; */
   text-align: left;
   padding: 8px;
 }
-.m-cap-content > p {
+
+.m-cap-content>p {
   color: #eb5b3c;
   font-size: 13px;
   margin: 0;
 }
+
 .m-cap-content-btn {
   text-align: center;
   padding: 8px;
 }
+
 #added-btn-cap {
   background-color: white;
   border: none;
@@ -204,7 +229,8 @@ button:hover {
 .in-news-div {
   margin-top: 80px;
 }
-.in-news-block {
+
+#in-news-block {
   /* border: 1px solid rebeccapurple; */
   width: 100%;
   height: 200px;
@@ -213,12 +239,34 @@ button:hover {
 
   justify-content: space-between;
 }
+
+#in-news-block-two {
+  /* border: 1px solid rebeccapurple; */
+  width: 100%;
+  height: 200px;
+  display: flex;
+  margin-top: 30px;
+
+  justify-content: space-between;
+}
+
+#in-news-block-three {
+  /* border: 1px solid rebeccapurple; */
+  width: 100%;
+  height: 200px;
+  display: flex;
+  margin-top: 30px;
+
+  justify-content: space-between;
+}
+
 .in-news-info {
   /* border: 1px solid red; */
   width: 23%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
+
 .new-info-nav {
   /* border: 1px solid red; */
   /* height: 20px; */
@@ -227,25 +275,30 @@ button:hover {
   display: flex;
   justify-content: space-between;
 }
+
 .new-info-nav-img {
   width: 35px;
   border-radius: 5px;
   background-color: #e5faf5;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
+
 .in-news-btn {
   background-color: white;
   border: none;
   margin-top: 5px;
 }
+
 .in-news-c-name {
   text-transform: capitalize;
   margin-left: 10px;
 }
-.in-news-c-name > h5 {
+
+.in-news-c-name>h5 {
   color: #44475b;
   margin-top: 2px;
 }
+
 .in-news-price {
   margin-top: 50px;
 }
@@ -254,15 +307,18 @@ button:hover {
   margin-bottom: 0;
   color: #44475b;
 }
+
 .in-news-price-b {
   margin-top: 1px;
   font-size: 14px;
   color: #a2808c;
 }
-.in-news-price > div {
+
+.in-news-price>div {
   margin-left: 10px;
   margin-top: 5px;
 }
+
 .in-news-price-b2 {
   margin-top: 1px;
   font-size: 14px;
@@ -273,6 +329,7 @@ button:hover {
 .a2_stock {
   margin-top: 30px;
 }
+
 .a2-top-div {
   /* border: 1px solid green; */
   width: 330px;
@@ -284,12 +341,14 @@ button:hover {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
-.a2-top-div > div{
+
+.a2-top-div>div {
   height: 80px;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
 }
+
 .a2-stock-r2 {
   width: 95%;
   margin: auto;
@@ -297,22 +356,25 @@ button:hover {
   margin-top: 10px;
   border-bottom: 0.001px solid #6ed9b6;
 }
+
 .a2-stock-r1 {
   display: flex;
 }
 
-.a2-stock-r1 > div > img {
+.a2-stock-r1>div>img {
   margin-top: 10px;
   margin-left: 5px;
   margin-bottom: 0;
 }
-.a2-stock-r1 > div > h5 {
+
+.a2-stock-r1>div>h5 {
   margin-left: 30px;
   font-size: 15px;
   margin-bottom: 0;
   border-bottom: 0;
   text-transform: capitalize;
 }
+
 .stack-r3 {
   width: 180px;
   display: flex;
@@ -320,7 +382,8 @@ button:hover {
   margin-left: 90px;
   justify-content: space-between;
 }
-.stack-r3 > div > p {
+
+.stack-r3>div>p {
   margin-top: 3px;
   font-size: 14px;
   color: #b78c8c;
@@ -341,16 +404,19 @@ button:hover {
 .a2-top-div-last-img {
   height: 200px;
 }
+
 .a2-top-div-last-t-1 {
   font-size: 20px;
   text-transform: capitalize;
   color: #444765;
 }
+
 .a2-top-div-last-t-2 {
   font-size: 14px;
   text-transform: capitalize;
   color: #00d09c;
 }
+
 .a2-top-div-last-btn {
   width: 90%;
   height: 40px;
